feat: Last Step (#2288)
* feat: add Studying stream & optional

* docs: 사다리타기(생성) README.md에 기능 요구사항 추가

* feat: add creating Ladder

* feat: add UI/UX

* refac: add DotCache, PointCache

* refac: extract methods

* refac: add first level collection

* feat: 사다리(게임실행)

* refac: PR 리뷰 반영

* refac: Last Step